examples/qasm_dev/syntax_errors/e14.qasm
// first thing is an int, not an id
gate 3 a,b { h b; cx a,b; h b; }
